# android_frameworks_av

./: Android.bp  CleanSpec.mk  METADATA  MainlineFiles.cfg  OWNERS  PREUPLOAD.cfg  patch.patch
apex/: Android.bp  AndroidManifest-media.xml  AndroidManifest-swcodec.xml  OWNERS  TEST_MAPPING  ld.config.txt  linker.config.txt  manifest.json  manifest_codec.json  mediaswcodec.32rc  mediaswcodec.rc  mediatranscoding.32rc  mediatranscoding.rc
apex/hiddenapi/: hiddenapi-max-target-o-low-priority.txt
apex/testing/: Android.bp  test_manifest.json  test_manifest_codec.json
camera/: Android.bp  Android.mk  Camera.cpp  CameraBase.cpp  CameraMetadata.cpp  CameraParameters.cpp  CameraParameters2.cpp  CameraParameters_EXT.cpp  CameraSessionStats.cpp  CameraUtils.cpp  CaptureResult.cpp  ICamera.cpp  ICameraClient.cpp  ICameraRecordingProxy.cpp  ICameraRecordingProxyListener.cpp  ICameraService.cpp  ICameraServiceListener.cpp  MtkCameraParameters.cpp  OWNERS  TEST_MAPPING  VendorTagDescriptor.cpp  camera_platform.aconfig  parameters.go
camera/camera2/: CaptureRequest.cpp  ConcurrentCamera.cpp  ICameraDeviceCallbacks.cpp  ICameraDeviceUser.cpp  (+2 more)
cmds/: OWNERS
drm/: OWNERS  README.md  TEST_MAPPING
include/: OWNERS  camera
media/: Android.mk  OWNERS  TEST_MAPPING
media/tests/benchmark/MediaBenchmarkTest/src/main/cpp/: Android.bp  CMakeLists.txt  NativeDecoder.cpp  NativeEncoder.cpp  NativeExtractor.cpp  NativeMuxer.cpp
radio/: Android.bp  IRadio.cpp  IRadioService.cpp  OWNERS  Radio.cpp
services/: Android.mk  OWNERS
soundtrigger/: ISoundTrigger.cpp  SoundTrigger.cpp
tools/: OWNERS  mainline_hook.sh  mainline_hook_partial.sh  mainline_hook_project.sh
(+5534 files in other folders)
